--- a/src/app/signals/signals.html
+++ b/src/app/signals/signals.html
@@ -1,4 +1,8 @@
-@if (loading) {
+<p>Count: {{ countSignal() }}</p>
+<p>DoubleCount: {{ doubleCountSignal()}}</p>
+<button (click)="increment()">+</button>
+
+@if (loadingSignal()) {
   <div class="fixed inset-0 flex items-center justify-center bg-white/60 z-[1000]">
     <div
       class="h-8 w-8 sm:h-10 sm:w-10 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"
@@ -10,7 +14,7 @@
   <h2 class="text-xl font-bold mb-4 text-gray-800">My Todos</h2>
 
   <ul class="space-y-2">
-    @for (item of todos; track item.id) {
+    @for (item of todosSignal(); track item.id) {
       <li class="flex items-center justify-between p-3 bg-gray-100 rounded hover:bg-gray-200 transition">
         <span class="text-gray-700">{{ item.todo }}</span>
         <span 
@@ -26,8 +30,6 @@
   </ul>
 </div>
 
-@if(error) {
-  <p>{{error}}</p>
+@if(errorSignal()) {
+  <p>{{errorSignal()}}</p>
 }
-
-<!-- tailwind არ მუშაობს ლიზასთან -->
